[package]
name = "pollinators"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8.5"
rustix = "0.38.43"
serde = { version = "1.0.217", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.15"
sha1_smol = "1.0.1"
url = "2.5.4"
walkdir = "2.5.0"
