[package]
name = "pollinators"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
console = "0.16"
indicatif = "0.18"
rand = "0.9"
rustix = "1"
serde = { version = "1.0.217", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.15"
sha1_smol = "1.0.1"
url = "2.5.4"
walkdir = "2.5.0"
